<resources>
    <string name="app_name">My Application</string>
    <string name="title_activity_task">Task</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_tasks">TasksActivity</string>
    <string name="title_activity_create_task">CreateTaskActivity</string>

    <!-- Strings used for Forms -->
    <string name="Title">Title</string>
    <string name="Description">Description</string>
    <string name="Year">Year</string>

    <string name="Month">Month</string>
    <string name="Day">Day</string>

    <string name="title_activity_update_task">UpdateTaskActivity</string>
    <string name="title_activity_shop_list">ShopListActivity</string>
    <string name="title_activity_specific_list">SpecificListActivity</string>
    <string name="title_activity_events">EventsActivity</string>
    <string name="title_activity_specific_event">SpecificEventActivity</string>
</resources>